Implementing adding bud in frontend.

--- a/frontend/src/main/java/app/includes/gamesTable.html
+++ b/frontend/src/main/java/app/includes/gamesTable.html
@@ -6,7 +6,6 @@
         <th ng-if="showAddScore" style="width: 25px;"> </th>
         <th>Away</th>
         <th>Date</th>
-        <th ng-if="showAddScore" >Action</th>
     </tr>
     <tr ng-repeat="game in games">
         <td>{{ game.homeTeamName }}</td>
@@ -18,9 +17,12 @@
             <input type="text" ng-model="game.awayScore" class="form-control"/>
         </td>
         <td>{{ game.awayTeamName }}</td>
-        <td>{{ game.startDateTime | date : 'EEEE - MMM d @ H:mm' }}</td>
-        <td ng-if="showAddScore">
-            <button type="button" class="btn btn-success btn-sm" ng-click="addScore($index)">Add</button>
+        <td>
+            {{ game.startDateTime | date : 'EEEE - MMM d @ H:mm' }}
+            <span ng-if="showAddScore">
+                <button type="button" class="btn btn-success btn-sm" ng-click="addScore($index)">Add</button>
+                <span ng-if="game.changed"> Bid was set.</span>
+            </span>
         </td>
     </tr>
 </table>
