--- a/frontend/src/main/java/app/includes/gamesTable.html
+++ b/frontend/src/main/java/app/includes/gamesTable.html
@@ -1,28 +1,33 @@
 <table class="table-condensed">
     <tr>
         <th>Home</th>
-        <th ng-if="showAddScore" style="width: 25px;"> </th>
+        <th ng-if="showAddScore" style="width: 55px;"> </th>
         <th> </th>
-        <th ng-if="showAddScore" style="width: 25px;"> </th>
+        <th ng-if="showAddScore" style="width: 55px;"> </th>
         <th>Away</th>
+        <th ng-if="showAddScore"> </th>
         <th>Date</th>
+        <th ng-if="showAddScore"> </th>
     </tr>
     <tr ng-repeat="game in games">
         <td>{{ game.homeTeamName }}</td>
-        <td ng-if="showAddScore">
-            <input type="text" ng-model="game.homeScore" class="form-control"/>
+        <td ng-if="showAddScore" style="text-align: right;">
+            <input ng-if="!game.bidSet" type="text" ng-model="game.homeTeamScore" class="form-control" size="2"/>
+            <span ng-if="game.bidSet" ng-bind="game.homeTeamScore"/>
         </td>
-        <td> - </td>
+        <td> : </td>
         <td ng-if="showAddScore">
-            <input type="text" ng-model="game.awayScore" class="form-control"/>
+            <input ng-if="!game.bidSet" type="text" ng-model="game.awayTeamScore" class="form-control" size="2"/>
+            <span ng-if="game.bidSet" ng-bind="game.awayTeamScore"/>
         </td>
-        <td>{{ game.awayTeamName }}</td>
-        <td>
-            {{ game.startDateTime | date : 'EEEE - MMM d @ H:mm' }}
-            <span ng-if="showAddScore">
-                <button type="button" class="btn btn-success btn-sm" ng-click="addScore($index)">Add</button>
-                <span ng-if="game.changed"> Bid was set.</span>
-            </span>
+        <td> {{ game.awayTeamName }} </td>
+        <td ng-if="showAddScore">
+            <button ng-if="!game.bidSet" type="button" class="btn btn-success btn-xs" ng-click="addScore($index)">Add bid</button>
+            <button ng-if="game.bidSet" type="button" class="btn btn-warning btn-xs" ng-click="changeScore($index)">Change bid</button>
+        </td>
+        <td> {{ game.startDateTime | date : 'EEEE - MMM d @ H:mm' }} </td>
+        <td ng-if="showAddScore">
+            <span ng-bind="game.wrongBidMsg" style="color: darkred;"/>
         </td>
     </tr>
 </table>
