--- a/frontend/src/main/java/app/includes/gamesTable.html
+++ b/frontend/src/main/java/app/includes/gamesTable.html
@@ -1,9 +1,9 @@
 <table class="table-condensed">
     <tr>
         <th>Home</th>
-        <th ng-if="showAddScore" style="width: 55px;"> </th>
+        <th style="width: 55px;"> </th>
         <th> </th>
-        <th ng-if="showAddScore" style="width: 55px;"> </th>
+        <th style="width: 55px;"> </th>
         <th>Away</th>
         <th ng-if="showAddScore"> </th>
         <th>Date</th>
@@ -11,16 +11,16 @@
     </tr>
     <tr ng-repeat="game in games">
         <td>{{ game.homeTeamName }}</td>
-        <td ng-if="showAddScore" style="text-align: right;">
-            <input ng-if="!game.bidSet" type="text" ng-model="game.homeTeamScore" class="form-control" size="2"/>
+        <td style="text-align: right;">
+            <input ng-if="!game.bidSet" type="text" ng-model="game.homeTeamScore" class="form-control"/>
             <span ng-if="game.bidSet" ng-bind="game.homeTeamScore"/>
         </td>
         <td>
             <span ng-if="showAddScore"> : </span>
             <span ng-if="!showAddScore"> - </span>
         </td>
-        <td ng-if="showAddScore">
-            <input ng-if="!game.bidSet" type="text" ng-model="game.awayTeamScore" class="form-control" size="2"/>
+        <td>
+            <input ng-if="!game.bidSet" type="text" ng-model="game.awayTeamScore" class="form-control"/>
             <span ng-if="game.bidSet" ng-bind="game.awayTeamScore"/>
         </td>
         <td> {{ game.awayTeamName }} </td>
